replace symlinks with actual content linked to files are going away so need to copy the content

--- a/clustericious/PlugAuth.conf
+++ b/clustericious/PlugAuth.conf
@@ -1,1 +1,15 @@
-/home/ollisg/etc/PlugAuth.conf
+---
+% use File::HomeDir;
+% my $data = File::HomeDir->my_home . '/var/plugauth';
+
+% extends_config 'common', port => 3001, app => 'plugauth';
+
+user_file: <%= $data %>/password
+group_file: <%= $data %>/group
+resource_file: <%= $data %>/resource
+host_file: <%= $data %>/host
+
+
+plugins:
+  - PlugAuth::Plugin::WebUI: {}
+  - PlugAuth::Plugin::Audit: {}
