--- a/clustericious/common.conf
+++ b/clustericious/common.conf
@@ -1,1 +1,24 @@
-/home/ollisg/etc/common.conf
+---
+% use File::HomeDir;
+% my $ip = "198.61.169.5";
+
+% my $run = File::HomeDir->my_home . "/var/run";
+% system 'mkdir', '-p', $run;
+
+% my $home = File::HomeDir->my_home . "/var/$app";
+% system 'mkdir', '-p', $home;
+
+simple_auth:
+  url: http://<%= $ip %>:3001
+
+url: http://<%= $ip %>:<%= $port %>
+
+start_mode: hypnotoad
+
+hypnotoad:
+  heartbeat_timeout: 500
+  pid_file: <%= $run %>/<%= $app %>-hypnotoad.pid
+  listen:
+    - http://<%= $ip %>:<%= $port %>
+  env:
+    MOJO_HOME: <%= $home %>
